Tincan/trunk/build/0810buildop.txt
if [ ! -d ../out/release/x86_64/obj ]; then  mkdir -p ../out/release/x86_64/obj; fi
clang++ -iquote ../include -isystem ../../external/include  -isystem ../../external/include/webrtc -DLINUX -D_IPOP_LINUX -DWEBRTC_POSIX -DWEBRTC_LINUX -D_GLIBCXX_USE_CXX11_ABI=0  -O3 -std=c++14 --stdlib=libc++ -pthread -g2 -gsplit-dwarf -fno-strict-aliasing --param=ssp-buffer-size=4 -fstack-protector -funwind-tables -fPIC -pipe -Wall -fno-rtti -c ../src/control_listener.cc -o ../out/release/x86_64/obj/control_listener.o
../src/control_listener.cc:29:18: error: constructor for 'tincan::ControlListener' must explicitly initialize the base class 'rtc::Thread' which does not have a default constructor
ControlListener::ControlListener(unique_ptr<ControlDispatch> control_dispatch):
                 ^
../../external/include/webrtc/rtc_base/thread.h:168:31: note: 'rtc::Thread' declared here
class RTC_LOCKABLE RTC_EXPORT Thread : public webrtc::TaskQueueBase {
                              ^
In file included from ../src/control_listener.cc:24:
In file included from ../include/control_listener.h:34:
In file included from ../include/control_dispatch.h:33:
../include/tap_frame.h:281:14: warning: private field 'tf_' is not used [-Wunused-private-field]
  TapFrame & tf_;
             ^
1 warning and 1 error generated.
Makefile:24: recipe for target '../out/release/x86_64/obj/control_listener.o' failed
make: *** [../out/release/x86_64/obj/control_listener.o] Error 1
